--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -10,6 +10,11 @@
         display: none;
         grid-template-columns: 1fr 1fr 1fr;
         gap: 24px;
+        list-style: none;
+
+        @media (max-width: 768px) {
+            grid-template-columns: 1fr 1fr;
+        }
 
         &--is-active {
             display: grid;
@@ -27,6 +32,12 @@
         display: flex;
         justify-content: center;
 
+        @media (max-width: 768px) {
+            white-space: nowrap;
+            overflow-x: scroll;
+            padding-left: 20px;
+        }
+
         &__button {
             color: variaveis.$corTextoSecundario;
             font-size: 20px;
@@ -40,6 +51,11 @@
 
             &--is-active {
                 border-color: variaveis.$corTextoSecundario;
+            }
+
+            @media (max-width: 768px) {
+                font-size: 16px;
+
             }
         }
     }
